--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-          crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="static/css/style_2.css">
     <title>{{ title }}</title>
 </head>
 <body>
 <header>
     <nav class="navbar navbar-light bg-light">
-        <hl>Миссия колонизация Марса</hl>
+        <h1>Миссия колонизация Марса</h1>
         <a href="#">Mars One</a>
     </nav>
     <h4>И на Марсе будут яблони цвести!</h4>
