--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" >
-    <link rel="stylesheet" href="static/css/style_2.css">
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_2.css') }}">
     <title>{{ title }}</title>
 </head>
 <body>
@@ -15,7 +18,6 @@
     </nav>
     <h4>И на Марсе будут яблони цвести!</h4>
 </header>
-
 <main role="main" class="container">
     {% block content %}{% endblock %}
 </main>
